[package]
name = "util-rs"
version = "0.3.0"
authors = ["Gil Rtr <glrtr2003@gmail.com>"]
edition = "2018"
description = "general utilities for rust, currently only for user input"
license = "WTFPL"
documentation = "https://docs.rs/util-rs"
homepage = "https://crates.io/crates/util-rs"
repository = "https://github.com/GilRtr/util-rs"

[dependencies]
log = "0.4.11"
